--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,7 +23,7 @@ include_directories(${LLVM_INCLUDE_DIRS})
 ####separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
 add_definitions(${LLVM_DEFINITIONS_LIST})
 
-add_executable(Bassoon bassoon.cxx lexer.cxx parser.cxx)
+add_executable(Bassoon bassoon.cxx lexer.cxx parser.cxx codegen.cxx)
 
 #if(testing_enabled)
 add_executable(Test lexer.cxx)
