--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 message(STATUS "attempting to build test executable")
 
-configure_file(test.bs test.bs COPYONLY)
+file(COPY test_scripts DESTINATION .)
+file(COPY test.bs DESTINATION .)
 #target_sources(Test PUBLIC driver.cxx lexer_test.cxx lexer_test.hxx parser_test.cxx parser_test.hxx)
 target_sources(Test PUBLIC driver.cxx lexer_test.cxx parser_test.cxx)
